Update 08-Functions and Methods Homework.ipynb

--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    return 4/3*math.pi*math.pow(rad,3)"
    ]
   },
   {
